--- a/Pipfile
+++ b/Pipfile
@@ -10,8 +10,12 @@ djangorestframework = "*"
 drf-nested-routers = "*"
 django-filter = "*"
 pillow = "*"
+django-cors-headers = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-django = "*"
+pytest-watch = "*"
 
 [requires]
 python_version = "3.11"
